Added comment explaining ACGT sum
Many people leave out the sum over the ACGT axis in the example notebook. I clarify the reason for it.

--- a/examples/genomics/genomics_simulation.ipynb
+++ b/examples/genomics/genomics_simulation.ipynb
@@ -421,6 +421,16 @@
     "                    batch_size=200,\n",
     "                    progress_update=None))\n",
     "        assert scores.shape[2]==4\n",
+    "        #The sum over the ACGT axis in the code below is important! Recall that DeepLIFT\n",
+    "        # assigns contributions based on difference-from-reference; if\n",
+    "        # a position is [1,0,0,0] (i.e. 'A') in the actual sequence and [0.3, 0.2, 0.2, 0.3]\n",
+    "        # in the reference, importance will be assigned to the difference (1-0.3)\n",
+    "        # in the 'A' channel, (0-0.2) in the 'C' channel,\n",
+    "        # (0-0.2) in the G channel, and (0-0.3) in the T channel. You want to take the importance\n",
+    "        # on all four channels and sum them up, so that at visualization-time you can project the\n",
+    "        # total importance over all four channels onto the base that is actually present (i.e. the 'A'). If you\n",
+    "        # don't do this, your visualization will look very confusing as multiple bases will be highlighted at\n",
+    "        # every position and you won't know which base is the one that is actually present in the sequence!\n",
     "        scores = np.sum(scores, axis=2)\n",
     "        method_to_task_to_scores[method_name][task_idx] = scores"
    ]
@@ -521,6 +531,15 @@
     "num_refs_per_seq=10 #number of references to generate per sequence\n",
     "method_to_task_to_scores['rescale_conv_revealcancel_fc_multiref_'+str(num_refs_per_seq)] = OrderedDict()\n",
     "for task_idx in [0,1,2]:\n",
+    "    #The sum over the ACGT axis in the code below is important! Recall that DeepLIFT\n",
+    "    # assigns contributions based on difference-from-reference; if\n",
+    "    # a position is [1,0,0,0] (i.e. 'A') in the actual sequence and [0, 1, 0, 0]\n",
+    "    # in the reference, importance will be assigned to the difference (1-0)\n",
+    "    # in the 'A' channel, and (0-1) in the 'C' channel. You want to take the importance\n",
+    "    # on all channels and sum them up, so that at visualization-time you can project the\n",
+    "    # total importance over all four channels onto the base that is actually present (i.e. the 'A'). If you\n",
+    "    # don't do this, your visualization will look very confusing as multiple bases will be highlighted at\n",
+    "    # every position and you won't know which base is the one that is actually present in the sequence!\n",
     "    method_to_task_to_scores['rescale_conv_revealcancel_fc_multiref_'+str(num_refs_per_seq)][task_idx] =\\\n",
     "        np.sum(rescale_conv_revealcancel_fc_many_refs_func(\n",
     "            task_idx=task_idx,\n",
